[project]
name = "ai-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
